testsuite/tests/overloadedrecflds/should_fail/FieldSelectors.hs
{-# LANGUAGE FieldSelectors #-}

module FieldSelectors
where

import Prelude

data Foo = Foo { foo :: Int, bar :: String }

foo = 3
